# fitpart

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
docs/: BRIEFING.md  billing-plan.md  deploy-phase2.md  (+1 more)
services/cad/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
services/cad/app/: __init__.py  calibration.py  dimensions.py  export.py  main.py  schemas.py  tolerance.py  validate.py
services/cad/app/templates/: __init__.py  adapter_ring.py  base.py  cable_clip.py  calibration_coupon.py  device_holder.py  drawer_handle.py  end_cap.py  furniture_glide.py  hinge.py  knob.py  l_bracket.py  pipe_clip.py  snap_lid.py  spacer.py  spring_clip.py  wall_hook.py
services/cad/scripts/: make_golden.py  new_archetype.py
services/cad/tests/: conftest.py  test_adapter_ring.py  test_api.py  test_archetypes.py  test_calibration.py  test_dimensions.py  test_drawer_handle.py  test_end_cap.py  test_furniture_glide.py  test_hinge.py  test_knob.py  test_snap_lid.py  test_spacer.py  test_spring_clip.py  test_tolerance.py
services/cad/tests/golden/: adapter_ring.json  adapter_ring.stl  cable_clip.json  cable_clip.stl  calibration_coupon.json  calibration_coupon.stl  device_holder.json  device_holder.stl  drawer_handle.json  drawer_handle.stl  end_cap.json  end_cap.stl  furniture_glide.json  furniture_glide.stl  hinge.json  hinge.stl  knob.json  knob.stl  l_bracket.json  l_bracket.stl  pipe_clip.json  pipe_clip.stl  snap_lid.json  snap_lid.stl  spacer.json  spacer.stl  spring_clip.json  spring_clip.stl  wall_hook.json  wall_hook.stl
(+77 files in other folders)
